--- a/src/main/webapp/resources/bootstrap/css/style.css
+++ b/src/main/webapp/resources/bootstrap/css/style.css
@@ -30,68 +30,79 @@
     background-color: #f3f3f3;
 }
 
-
 /*@import url(//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css);*/
 
 .detailBox {
-    width:320px;
-    border:1px solid #bbb;
-    margin:50px;
+    width: 320px;
+    border: 1px solid #bbb;
+    margin: 50px;
 }
+
 .titleBox {
-    background-color:#fdfdfd;
-    padding:10px;
+    background-color: #fdfdfd;
+    padding: 10px;
 }
-.titleBox label{
-    color:#444;
-    margin:0;
-    display:inline-block;
+
+.titleBox label {
+    color: #444;
+    margin: 0;
+    display: inline-block;
 }
 
 .commentBox {
-    padding:10px;
-    border-top:1px dotted #bbb;
+    padding: 10px;
+    border-top: 1px dotted #bbb;
 }
+
 .commentBox .form-group:first-child, .actionBox .form-group:first-child {
-    width:80%;
+    width: 80%;
 }
+
 .commentBox .form-group:nth-child(2), .actionBox .form-group:nth-child(2) {
-    width:18%;
+    width: 18%;
 }
+
 .actionBox .form-group * {
-    width:100%;
+    width: 100%;
 }
+
 .taskDescription {
-    margin-top:10px;
+    margin-top: 10px;
 }
+
 .commentList {
-    padding:0;
-    list-style:none;
-    max-height:200px;
-    overflow:auto;
+    padding: 0;
+    list-style: none;
+    max-height: 200px;
+    overflow: auto;
 }
+
 .commentList li {
-    margin:0;
-    margin-top:10px;
+    margin: 0;
+    margin-top: 10px;
 }
+
 .commentList li > div {
-    display:table-cell;
+    display: table-cell;
 }
+
 .commenterAuthor {
-    width:30px;
+    width: 30px;
     margin-left: 5px;
     color: #eb9316;
     font-size: 130%;
 }
 
 .commentText p {
-    margin:0;
+    margin: 0;
 }
+
 .sub-text {
-    color:#aaa;
-    font-family:verdana;
-    font-size:11px;
+    color: #aaa;
+    font-family: verdana;
+    font-size: 11px;
 }
+
 .actionBox {
     border-top: 1px dotted #bbb;
     padding: 10px;
@@ -111,4 +122,12 @@
 
 th {
     cursor: pointer;
+}
+
+.loginBlock {
+    background: #E8E8E8;
+    width: 300px;
+    padding: 5px 0px;
+    border-radius: 10px;
+    margin-top: 20px
 }
