add delete and extend url

--- a/src/main/webapp/resources/bootstrap/css/style.css
+++ b/src/main/webapp/resources/bootstrap/css/style.css
@@ -133,5 +133,11 @@ th {
 }
 
 .urlHistory {
-    width: 90%;
+
+}
+
+.origUrl {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
